# docs/openapi.yaml
@@ -912,6 +912,23 @@ components:
           type: boolean
           title: Spire Enabled
           default: false
+        plugin_preset:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Plugin Preset
+        plugins:
+          anyOf:
+          - items:
+              type: string
+            type: array
+          - type: 'null'
+          title: Plugins
+        on_error:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: On Error
       type: object
       required:
       - name
@@ -1043,6 +1060,11 @@ components:
             type: array
           - type: 'null'
           title: Plugins
+        on_error:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: On Error
         plugin_config_file:
           anyOf:
           - type: string
@@ -1551,6 +1573,11 @@ components:
           type: number
           title: Timeout Seconds
           default: 300.0
+        task_timeout_seconds:
+          anyOf:
+          - type: number
+          - type: 'null'
+          title: Task Timeout Seconds
       type: object
       title: RunRequest
     RunState:
